--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div class="likhawat happy-birthday schoolbell-regular">
         <p>i know im a bit late :P</p>
         <h4 style="margin-top: 100px;">At nineteen, one stands at the threshold of change. Childhood has faded into memory, yet the weight of full adulthood has not fully settled. It is a year of quiet transition, where the world seems both vast with opportunity and uncertain in its demands. <br>
-        Decisions begin to hold greater consequence, and the future no longer feels distant but something to be shaped with each passing day. There is a pull toward ambition, yet also a lingering hesitation, for the path ahead is not always clear. But nineteen is not an age for fear—it is an age for steady steps, for learning, for building, and for embracing both the known and the unknown with equal resolve.</h4>
+        Decisions begin to hold greater consequence, and the future no longer feels distant but something to be shaped with each passing day. There is a pull toward ambition, yet also a lingering hesitation, for the path ahead is not always clear. But nineteen is not an age for fear—it is an age for steady steps, for learning, for building, and for embracing both the known and the unknown with equal resolve. -ChatGPT</h4>
+        <h4>JUST CARPE DIEM THROUGH LIFE AHAHHAHAHA -me</h4>
         <p>now for my gift</p>
         <a href="./gift.html">Gift</a>
     </div>
